fixed margins on mobile intro parts

--- a/web/app/themes/waq2015/assets/css/application.css
+++ b/web/app/themes/waq2015/assets/css/application.css
@@ -3674,9 +3674,12 @@ footer .logo-o2 {
       padding-top: 20px;
       margin-top: 30px; }
     section.intro .main.right .middle {
-      padding-top: 100px;
-      padding-bottom: 100px;
+      padding-top: 30px;
+      padding-bottom: 30px;
       text-align: center; }
+    section.intro .main.right .bottom {
+      padding-top: 30px;
+      padding-bottom: 30px; }
     section.intro .main.right .title.huge, section.intro .main.right nav[role="navigation"] ul a.huge, nav[role="navigation"] ul section.intro .main.right a.huge {
       width: 100%; }
     section.intro .main.right .title.main, section.intro .main.right nav[role="navigation"] ul a.main, nav[role="navigation"] ul section.intro .main.right a.main {
