--- a/web/app/themes/waq2015/assets/sass/mediaqueries/_general.sass
+++ b/web/app/themes/waq2015/assets/sass/mediaqueries/_general.sass
@@ -343,9 +343,12 @@
         padding-top: $medium
         margin-top: $large
       .middle
-        padding-top: $xxlarge
-        padding-bottom: $xxlarge
+        padding-top: $large
+        padding-bottom: $large
         text-align: center
+      .bottom
+        padding-top: $large
+        padding-bottom: $large
       .title
         &.huge
           width: 100%
